[tool.poetry]
name = "pyeia"
version = "0.1.5"
description = "Python client for the Energy Information Administration (EIA) API"
authors = ["Thomas Tu <thomasthetu@gmail.com>"]
license = "BSD-3-Clause-LBNL"
homepage = "https://github.com/thomastu/pyEIA"
repository = "https://github.com/thomastu/pyEIA"
readme = "README.md"
exclude = []
packages = [
    {include = "eia"},
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
click = "^7.1.2"
dynaconf = "^3.0.0"
httpx = "^0.13.3"
loguru = "^0.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
